--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.2.0",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
