--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@nestjs/mapped-types": "*",
-    "@radix-ui/themes": "^1.1.2",
+    "@radix-ui/react-form": "^0.0.3",
+    "@radix-ui/react-popover": "1.0.6",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -23,5 +25,10 @@
     "react-dom": "18.2.0",
     "swr": "^2.2.2",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3"
   }
 }
