--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@nestjs/mapped-types": "*",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-form": "^0.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "1.0.6",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -25,7 +29,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.2",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
